--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">GApp</string>
+    <string name="item_default_name">Nom de l\'article</string>
+    <string name="item_default_price">0$</string>
+    <string name="description_image">TODO</string>
+    <string name="welcoming_text">Car Seller</string>
+    <string name="testez_nos_voitures">Testez nos voitures</string>
+    <string name="description">TO DO</string>
+    <string name="merci">Merci</string>
 </resources>
