--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="testez_nos_voitures">Testez nos voitures</string>
     <string name="description">TO DO</string>
     <string name="merci">Merci</string>
+    <string name="ma_description">ma description</string>
 </resources>
